# bdideepagents

./: .env.example  .gitignore  pyproject.toml
agent_templates/: __init__.py  au2_agent.py
docs/: agentbase移植指南.md  middleware中间件开发指南.md  开发指南.md
examples/: example_open_deep_research.py  example_open_deep_research_langfuse.py  example_run.py  example_run_customized.py
middlewares/: au2_compression.py
